# focus-timer

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  matrix.rs  time.rs
src/time/: duration.rs  timeout.rs
