[package]
name = "focus-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = "1.0.0"
nrf52833-hal = { git = "https://github.com/moddedTechnic/nrf-hal.git" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
log = "0.4.25"

[[bin]]
name = "traffic-light-controller"
path = "src/main.rs"
test = false
doctest = false
bench = false
